# online-cinema

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  test_smtp.py
alembic/: env.py
alembic/versions/: 311506735fb0_added_payments_and_payment_items_tables.py  621ea5d695bf_.py  8a36d77d9f87_test_column.py  9ea8a7fcdfc4_initial_migration.py  ba53bf314149_added_payments_models_and_updated_.py  d6bb52ba333a_initial_migration.py  fbf05488cfea_add_payments_and_payment_items_tables.py
github/workflows/: ci-cd.yml
src/: celery_app.py  main.py
src/config/: dependencies.py  settings.py
src/database/: session_postgresql.py
src/database/models/: accounts.py  movies.py  nofitications.py  orders.py  payments.py  shopping_cart.py
src/notifications/: email.py  exceptions.py  interfaces.py
src/router/: accounts.py  movies.py  orders.py  payments.py  shopping_cart.py
src/routes/: accounts.py
src/schemas/: accounts.py  movies.py  orders.py  payments.py  shopping_cart.by.py
src/security/: jwt.py
src/storage/: interfaces.py  s3.py
src/tasks/: __init__.py  accounts.py  celery.py  celery_tasks.py
src/tests/test_integration/: test_accounts.py  test_movies.py  test_notifications.py  test_orders.py  test_payments.py  test_shopping_cart.py
src/validation/: accounts.py
