[tool.poetry]
name = "online-cinema"
version = "0.1.0"
description = "Online Cinema API built with FastAPI"
authors = ["Maxim <maximuschampion2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
pydantic = ">=2.7.0,<3.0"
pydantic-settings = "^2.10"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
celery = "^5.5.3"
redis = "^5.3.0"
python-multipart = "^0.0.6"
email-validator = "^2.2.0"
aiofiles = "^24.1.0"
httpx = "^0.28.1"
aiosmtplib = "^4.0.1"
python-jose = "^3.5.0"
aioboto3 = "^15.0.0"
aiobotocore = "^2.23.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

alembic = "^1.14.0"
boto3 = "^1.38.27"
botocore = "^1.38.27"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
black = "^25.1.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

1
2
3-
4
5 -